# ItelLastProject

./: Final_main.c  README.md  ROS.rm  main.c  webcam_usb.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml  improvement.yml
ai/: export_to_onnx.py  onnx_infer_cam_cuda.py  split_dataset.py  test.py  train.py  train_from_pt_cuda.py  video.py
cctv/: .gitignore  README.dataset.txt  README.roboflow.txt  ReadMe.md  calibrate_homography.py  data.yaml  fire_and_person.yaml  homography_matrix.npy  map.pgm  perspective_mapper.py  record.py  recorder_gui.py  server.py  server.py_backup.py  server2.py  train.py  train_yolo.py  update_labels.py  webcam.py
cctv/dataset/labels/: train.cache  valid.cache
cctv/rpi/: app.c  app2.c  buzzer_app.c  buzzer_device.c  mlx90640_read.py
cctv/test/labels/: 28_png.rf.3f8dd446707a9150994f6327f466ef9b.txt  37_png.rf.941d7d09e5fb3618acdd056be695f54e.txt  candle-3026952_1920_jpg.rf.2e45719069ace7e66805b48fc2ea374b.txt  candle-876339_1920_jpg.rf.c30c7685cfe2395767c900582885d1f9.txt  christmas-2930915_1920_jpg.rf.6c273569f3e2abc1e64dbae4e582eefa.txt  image2026_jpg.rf.25ba059443bfd040f60f14dc91e70bc3.txt  image2145_jpg.rf.c82a5f1c95606e5350d42a0ed2e910be.txt  large_-760-_jpg.rf.86f612b244ca9261f7bd1fa808cc38c0.txt  light-a-candle-6650038_1920_jpg.rf.cd03a13cdbcf8c22b74b6b2580835d05.txt
cctv/train/: labels.cache
cctv/train/labels/: 18_png.rf.78edf2c1a3728a1343a3b4e1fea04840.txt  18_png.rf.7bf98a61760849a00d9f3e2c09be9680.txt  18_png.rf.c73c2c4707e6cc469a9b5e72b994d528.txt  19_png.rf.1914a3041e026531defb9183278ebc4e.txt  19_png.rf.4fbcfb999c6200c645febc542917a24b.txt  19_png.rf.e46e7317003229d84d07c43cf6b76504.txt  22_png.rf.9d96fa38516cab1765bb6d6998089ae9.txt  22_png.rf.af085a260ac8a3a3e997e2769f1a9661.txt  22_png.rf.d515c7c609da22b03495e203f490f8f5.txt  23_png.rf.4c65f3867aa569865e5c0623f762ff00.txt  23_png.rf.7069d4f09cc0c3124736c15e0862ad22.txt  23_png.rf.d862c245504af7b5bcbed51ffa1d0330.txt  24_png.rf.2b0248aeea817187b613fcc44a5ed2fe.txt  24_png.rf.5f2d996e5ae33ad09bac2c43ab8281fb.txt  24_png.rf.772716c8f985713633fda51ee144b0ab.txt  25_png.rf.1363bf9c9eb5fafc0fbf18c210dc528e.txt  25_png.rf.8bbb06d6084843a2ccf9f89d33aaf5fb.txt  25_png.rf.e3c3abe27f26802ef873cc099692a97e.txt  27_png.rf.27392c28c1db5259b7b7b91c9a5c1201.txt  27_png.rf.f86741ce55c14151aff4be9150ffe963.txt  27_png.rf.fee244a7b7f246d363347efdbf91ed2e.txt  31_png.rf.394770fc648727cec1f52dfda3a2c40b.txt  31_png.rf.6cb92c549c8cc9ff0a309e438e76fcc4.txt  31_png.rf.7ebfee7d2dc294eb5102a51041e56fed.txt  32_png.rf.5d052ed3b1b2876089c08736c767b689.txt  32_png.rf.986aeded0b568828e7c5b2ac96f32188.txt  32_png.rf.9a7b34e6585a9bb31228a7fa05e42075.txt  33_png.rf.ae6bf23471582c2f8cb05aeaea92469d.txt  33_png.rf.b61f088e6946bdef238ccca9d72580ae.txt  33_png.rf.f0a0502e2f8d2dd36a77e493b9a8b5e2.txt  34_png.rf.8fc9a3e34b60cca7bd68dc7aa77bbd5f.txt  34_png.rf.c990f18b2271cea94c64fb32d03c432e.txt  34_png.rf.fdf22df1e146b00b94bcf31b8a6738c6.txt  35_png.rf.3b6ab697f17a8dbd9092b1c798174aa9.txt  35_png.rf.3cb64a6401985f422ae407ac34d80b3f.txt  35_png.rf.9453f249131b9b10cc215b7898f3a874.txt  38_png.rf.6836291991719eda8eed172e1618e1bb.txt  38_png.rf.795a441654c78ae0d32247a23eacbfb4.txt  38_png.rf.d4996cd2cc2a3b0bd9011bfb35d104a5.txt  39_png.rf.7b0e9a54e8f3804e61c43e156104ccbb.txt  (+717 more)
cctv/valid/: labels.cache
cctv/valid/labels/: 21_png.rf.71597f53ed6ef9e751147cb220ee66bf.txt  advent-1067178_1920_jpg.rf.ce2bcba273d2a74a1855972b33a03e97.txt  candle-2651278_1920_jpg.rf.254c635a8895480c487a7a1d517bb7ce.txt  (+7 more)
ros_example/ros2_ws/src/socket_server_pkg/: CMakeLists.txt  package.xml
ros_example/ros2_ws/src/socket_server_pkg/include/socket_server_pkg/: socket_server_node.hpp
ros_example/ros2_ws/src/socket_server_pkg/launch/: socket_server.launch.py
ros_example/ros2_ws/src/socket_server_pkg/src/: socket_server_node.cpp
ros_example/ros2_ws/src/turtlebot3/src/ros_goal_client/: CMakeLists.txt
ros_example/ros2_ws/src/turtlebot3/src/ros_goal_client/src/: rosGoalClient.cpp  rosGoalServer.cpp
ros_example/ros2_ws/src/turtlebot3/src/ros_tutorials_topic/: CMakeLists.txt
ros_example/ros2_ws/src/turtlebot3/src/ros_tutorials_topic/install/: setup.sh
ros_example/ros2_ws/src/turtlebot3/src/ros_tutorials_topic/install/ros_tutorials_topic/share/ros_tutorials_topic/: package.zsh
ros_example/ros2_ws/src/turtlebot3/src/ros_tutorials_topic/src/: topic_publisher.cpp
ros_example/ros2_ws/src/turtlebot3/src/roskccistc/: CMakeLists.txt  Makefile  package.xml  roskccistc.pro  roskccistc.pro.user.03e9d80
ros_example/ros2_ws/src/turtlebot3/src/roskccistc/include/roskccistc/: mainwidget.h  rosnode.h  socketclient.h  tab1roscontrol.h  tab2socketclient.h
ros_example/ros2_ws/src/turtlebot3/src/roskccistc/src/: main.cpp  mainwidget.cpp  rosnode.cpp  socketclient.cpp  tab1roscontrol.cpp  tab2socketclient.cpp
ros_example/ros2_ws/src/turtlebot3/src/roskccistc/ui/: mainwidget.ui  tab1roscontrol.ui  tab2socketclient.ui
ros_example/ros2_ws/src/turtlebot3/src/simple_navigation_goals/: package.xml
ros_example/ros2_ws/src/turtlebot3/src/simple_navigation_goals/src/: simple_navigation_goals.cpp
ros_example/ros2_ws/src/uart_bridge_cpp/: CMakeLists.txt  package.xml
ros_example/ros2_ws/src/uart_bridge_cpp/launch/: multi_uart.launch.py  uart_bridge.launch.py
ros_example/ros2_ws/src/uart_bridge_cpp/src/: uart_bridge_ama1_node.cpp  uart_bridge_node.cpp
servo_two/: .cproject  .project  STM32F103RBTX_FLASH.ld  servo_two Debug.launch  servo_two.ioc
servo_two/Debug/: makefile  servo_two.elf  servo_two.list  servo_two.map
turtlebot3_ws/install/: setup.sh
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/rescue_orchestrator/: CMakeLists.txt
turtlebot3_ws/src/rescue_orchestrator/launch/: rescue_orchestrator.launch.py
turtlebot3_ws/src/rescue_orchestrator/src/: rescue_orchestrator_node.cpp
turtlebot3_ws/src/ros_goal_client/: package.xml
turtlebot3_ws/src/ros_goal_client/src/: rosGoalServer.cpp  rosGoalServer_org.cpp
turtlebot3_ws/src/simple_navigation_goals/: CMakeLists.txt
(+1773 files in other folders)
