<?xml version="1.0"?>
<package format="3">
  <name>simple_navigation_goals</name>
  <version>0.0.1</version>
  <description>ROS2 Humble Nav2 NavigateToPose client (names kept same as ROS1)</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>

  <export/>
</package>

